--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,19 +6,29 @@
     padding: 0px;
     height: 100vh;
     width: 100vw;
+    
 }
 html, body{
     background: black;
 
 }
+body{
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+}
 main{
     position: relative;
-    background: green;
-    height: 100vh;
+    
+    height: 100%;
+    width: 100%;
 }
-section#telefone{
+#telefone{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: -50%, -50%;
+    transform:translate(-50%, -50%);
+    background: url(../imagens/frame-iphone.png) no-repeat;
+    height: 627px;
+    width: 311px;
 }
