--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,3 +32,28 @@ main{
     height: 627px;
     width: 311px;
 }
+#tela{
+    width: 266px;
+    height: 469px;
+    position: relative;
+    top: 81px;
+    left: 23px;
+}
+section#redes-sociais{
+text-align: right;
+}
+section#redes-sociais img{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover {
+border: 2px solid lightgray;
+/* botões saltam para dentro */
+transform: translate(-3px, -3px);
+box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.218);
+transition: transform .3s;
+}
